--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -103,7 +103,7 @@ struct {
 %
 % use: https://github.com/tlswg/tls13-spec/pull/1396#issuecomment-3285930579
 % 
-Клиент не должен использовать билет по прошествии 7 суток после его выпуска,
+Клиент не должен использовать билет по прошествии 7 суток после его выпуска
 независимо от значения, установленного в \code{ticket_lifetime}.
 %
 Срок действия билета может сокращаться относительно \code{ticket_lifetime}
@@ -253,7 +253,7 @@ struct {
 
 В поле \code{request_update} отправитель сообщения информирует о 
 необходимости отправки встречного \token{KeyUpdate} или, другими словами,
-необходимости обновления ключа защиты принимаемых прикладных данных.
+о необходимости обновления ключа защиты принимаемых прикладных данных.
 %
 Значение \code{update_requested} означает необходимость отправки встречного 
 сообщения, значение \code{update_not_requested}~--- отсутствие необходимости.
