--- a/spec13/095Upd.tex
+++ b/spec13/095Upd.tex
@@ -8,7 +8,7 @@
 Впоследствии клиент может обновить \code{client_application_traffic_secret}
 и построить по нему новый ключ защиты данных, отправляемых серверу.
 %
-Соответственно сервер может обновить \code{server_application_traffic_secret}
+Соответственно, сервер может обновить \code{server_application_traffic_secret}
 и построить новый ключ защиты данных, отправляемых клиенту.
 
 Правила обновления:
