--- a/spec13/097Auth.tex
+++ b/spec13/097Auth.tex
@@ -34,8 +34,8 @@ $\code{Transcript-Hash}(\code{ClientHello},\ldots,\code{Certificate})$,
 
 \begin{note*}
 Выбранный формат подписываемых данных защищает от угроз для сервера, который
-поддерживает соединения TLS версии 1.2, используя тот же сертификат и 
-соответственно личный ключ. При выборе в TLS версии 1.2 режима DHE сервер 
+поддерживает соединения TLS версии 1.2, используя тот же сертификат и, 
+соответственно, личный ключ. При выборе в TLS версии 1.2 режима DHE сервер 
 подписывает и отправляет в сообщении \code{ServerKeyExhchange} данные, 
 начальные 32 байта которых контролирует клиент.
 \end{note*}
