--- a/spec13/91Syntax.tex
+++ b/spec13/91Syntax.tex
@@ -67,7 +67,7 @@ T T2[n];
 \end{codeblock}
 %
 Здесь \code{n}~--- размер векторов \code{T2} в байтах. Предполагается, что коды 
-элементов \code{T} имеют фиксированную длину, и что число~\code{n} кратно этой длине. 
+элементов \code{T} имеют фиксированную длину и что число~\code{n} кратно этой длине. 
 
 При кодировании векторов фиксированной длины длина не включается в кодовое представление. 
 
@@ -111,8 +111,8 @@ uint16 longer<0..800>;
 Вектор~\code{longer} может иметь нулевую длину, и тогда его кодовое
 представление~--- это пустая последовательность.
 %
-Если же длина ненулевая, то кодовое представление вектора начинается с кода
-длины, и этот код снова является двухбайтовым.
+Если же длина ненулевая, то кодовое представление вектора начинается с кода 
+длины и этот код снова является двухбайтовым.
 
 \hiddensection{Перечисления}\label{SYNTAX.Enums}
 
