--- a/spec13/99Biblio.tex
+++ b/spec13/99Biblio.tex
@@ -1,7 +1,7 @@
 \clearpage
 \begin{thebibliography}{999}
 \bibitem{ISO9899}
-ISO/IEC 9899:2011 
+ISO/IEC 9899:2011,
 Information technology~--– Programming languages~--- C\\
 {\small (Информационные технологии~--- Языки программирования~--- Си)}
 
