Fix editorial issues

--- a/spec13/03Terms.tex
+++ b/spec13/03Terms.tex
@@ -126,7 +126,7 @@ Cвязь между сторонами на транспортном комму
 
 \begin{note*}
 Элементы являются степенями при мультипликативной записи группы и кратными при 
-аддитивной.
+аддитивной записи.
 \end{note*}
 
 {\bf \thedefctr~PSK-скрепка} (PSK-binder):
