--- a/spec13/051Purpose.tex
+++ b/spec13/051Purpose.tex
@@ -1,7 +1,7 @@
 \section{Назначение}\label{COMMON.Purpose}
 
-Настоящий стандарт определяет криптографический протокол TLS версии 1.3,
-далее просто TLS.
+Настоящий стандарт определяет криптографический протокол TLS версии 1.3
+(далее~--- TLS).
 %
 Протокол предназначен для защиты соединений между клиентами и серверами в сети 
 Интернет.
