--- a/spec13/065Auth.tex
+++ b/spec13/065Auth.tex
@@ -78,7 +78,7 @@ DER, код размещается в поле \code{CertificateEntry.cert_data}
 DER-код контейнера \code{SubjectPublicKeyInfo} (см.~\ref{HS.Ext.List}).
 
 \begin{note*}
-Контейнер \code{SubjectPublicKeyInfo} содержит открытый ключ, но не 
+Контейнер \code{SubjectPublicKeyInfo} содержит открытый ключ, а не 
 удостоверяющую подпись, обычную для сертификатов. Тем не менее, 
 контейнер выполняет функции сертификата, если сторона TLS ведет список
 доверенных контейнеров, согласованный за пределами TLS, и проверяет,
