--- a/spec13/067Post.tex
+++ b/spec13/067Post.tex
@@ -307,7 +307,7 @@ struct {
 % traffic secrets, retaining the receive traffic secret does not threaten the  
 % forward secrecy of data sent before the sender changed keys.
 
-2~Если стороны независимо одновременно отправляют друг друг сообщения 
+2~Если стороны независимо одновременно отправляют друг другу сообщения 
 \token{KeyUpdate} с запросами на встречные сообщения, то, ответив на запросы, 
 каждая сторона в конце концов обновит ключ отправляемых ею данных дважды.
 \end{notes}
