--- a/spec13/92EMS.tex
+++ b/spec13/92EMS.tex
@@ -17,6 +17,9 @@
 1.3 и ниже следует сообщать прикладным протоколам об использовании расширения 
 в тех случаях, когда установлено соединение TLS~1.3.
 
+Тем не менее расширение может использоваться, чтобы информировать о защите 
+прикладные протоколы.
+
 \hiddensection{Вычисление мастер-ключа}\label{TLS12.MS}
 
 Если клиент и сервер согласовали применение расширения
