--- a/spec13/00Title.tex
+++ b/spec13/00Title.tex
@@ -11,12 +11,12 @@
 \vskip2cm
 \noindent
 {\bf\Large Информационные технологии и безопасность}\\[10pt]
-{\bf\large ПРОТОКОЛ ЗАЩИТЫ ТРАНСПОРТНОГО УРОВНЯ (TLS)\\ ВЕРСИИ 1.3}\\
+{\bf\large ПРОТОКОЛ ЗАЩИТЫ ТРАНСПОРТНОГО УРОВНЯ\\ ВЕРСИИ 1.3}\\
 
 \vskip2cm
 \noindent
 {\bf\Large Iнфармацыйныя тэхналогii i бяспека}\\[10pt]
-{\bf\large ПРАТАКОЛ АХОВЫ ТРАНСПАРТНАГА ЎЗРОЎНЮ (TLS)\\ ВЕРСII 1.3}\\ 
+{\bf\large ПРАТАКОЛ АХОВЫ ТРАНСПАРТНАГА ЎЗРОЎНЮ\\ ВЕРСII 1.3}\\ 
 
 \vskip9cm
 \hrule height 1pt
@@ -60,18 +60,21 @@
 
 1~РАЗРАБОТАН учреждением Белорусского государственного университета 
 <<Науч\-но-исследовательский  институт прикладных проблем математики и 
-информатики>> (НИИ ППМИ)
-
-ВНЕСЕН Оперативно-аналитическим центром при Президенте Республики Беларусь 
+информатики>>
 
 2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
 Беларусь от $\phantom{\text{22 мая 2014 г.}}$~\No~$\phantom{23}$
 
 3~Настоящий стандарт разработан на основе документа RFC 8446:2018 <<The 
 Transport Layer Security (TLS) Protocol. Version 1.3>> (<<Протокол защиты 
-транспортного уровня. Версия 1.3>>). Документ RFC 8446 разработан 
-Специальной комиссией интернет-разработок (Internet Engineering Task 
-Force)
+транспортного уровня. Версия 1.3>>). 
+
+Документ RFC 8446 разработан Специальной комиссией интернет-разработок 
+(Internet Engineering Task Force).
+
+Перевод с английского языка (en).
+
+Степень соответствия~--- неэквивалентная (NEQ)
 
 4~ВВЕДЕН ВПЕРВЫЕ
 
