--- a/spec13/01Logo.tex
+++ b/spec13/01Logo.tex
@@ -13,14 +13,14 @@
 
 Информационные технологии и безопасность
 
-ПРОТОКОЛ ЗАЩИТЫ ТРАНСПОРТНОГО УРОВНЯ (TLS) ВЕРСИИ 1.3
+ПРОТОКОЛ ЗАЩИТЫ ТРАНСПОРТНОГО УРОВНЯ ВЕРСИИ 1.3
 
 
 \vskip 9pt
 
 Iнфармацыйныя тэхналогii i бяспека
 
-ПРАТАКОЛ АХОВЫ ТРАНСПАРТНАГА ЎЗРОЎНЮ (TLS) ВЕРСII 1.3
+ПРАТАКОЛ АХОВЫ ТРАНСПАРТНАГА ЎЗРОЎНЮ ВЕРСII 1.3
 
 } % bfseries
 
@@ -28,7 +28,7 @@ Iнфармацыйныя тэхналогii i бяспека
 
 Information technology and security
 
-The Transport Layer Security (TLS) Protocol Version 1.3
+The Transport Layer Security Protocol Version 1.3
 
 \vskip 4pt                
 \hrule width \textwidth
