--- a/spec13/00Title.tex
+++ b/spec13/00Title.tex
@@ -18,7 +18,11 @@
 {\bf\Large Iнфармацыйныя тэхналогii i бяспека}\\[10pt]
 {\bf\large ПРАТАКОЛ АХОВЫ ТРАНСПАРТНАГА ЎЗРОЎНЮ\\ ВЕРСII 1.3}\\ 
 
-\vskip9cm
+\vskip2cm
+\noindent
+{\bf (RFC 8446:2018, NEQ)}\\ 
+
+\vfill
 \hrule height 1pt
 \vskip0.4mm
 \hrule height 2pt
@@ -34,9 +38,9 @@
 \hrule
 \vskip2mm
 
-УДК~004.056.5.057.4(083.74)(476)\hfill
-МКС~35.240.01\hfill
-КП~05
+УДК~$\phantom{004.056.5.057.4}$\hfill
+ОГКС~35.240.01\hfill
+NEQ
 
 \vskip0.5mm
  
@@ -65,16 +69,9 @@
 2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
 Беларусь от $\phantom{\text{22 мая 2014 г.}}$~\No~$\phantom{23}$
 
-3~Настоящий стандарт разработан на основе документа RFC 8446:2018 <<The 
-Transport Layer Security (TLS) Protocol. Version 1.3>> (<<Протокол защиты 
-транспортного уровня. Версия 1.3>>). 
-
-Документ RFC 8446 разработан Специальной комиссией интернет-разработок 
-(Internet Engineering Task Force).
-
-Перевод с английского языка (en).
-
-Степень соответствия~--- неэквивалентная (NEQ)
+3~Настоящий стандарт разработан с учетом основных нормативных положений 
+документа RFC 8446:2018 <<The Transport Layer Security (TLS) Protocol. Version 
+1.3>> (<<Протокол защиты транспортного уровня. Версия 1.3>>)
 
 4~ВВЕДЕН ВПЕРВЫЕ
 
