--- a/spec13/93BSuites.tex
+++ b/spec13/93BSuites.tex
@@ -1,4 +1,5 @@
-\begin{appendix}{В}{обязательное}{Использование алгоритмов СТБ}\label{BSUITES}
+\begin{appendix}{В}{обязательное}
+{Использование алгоритмов стандартов серии СТБ 34.101}\label{BSUITES} 
 
 \mbox{}
 
