Set publication details in btls13

--- a/spec13/00Title.tex
+++ b/spec13/00Title.tex
@@ -38,7 +38,7 @@
 \hrule
 \vskip2mm
 
-УДК~$\phantom{004.056.5.057.4}$\hfill
+УДК 004.728.5.057.4.056.5(083.74) (476)\hfill
 ОГКС~35.240.01\hfill
 NEQ
 
@@ -67,7 +67,7 @@ NEQ
 информатики>>
 
 2~УТВЕРЖДЕН И ВВЕДЕН В ДЕЙСТВИЕ постановлением Госстандарта Республики 
-Беларусь от $\phantom{\text{22 мая 2014 г.}}$~\No~$\phantom{23}$
+Беларусь от 27 ноября 2025 г. \No~156
 
 3~Настоящий стандарт разработан с учетом основных нормативных положений 
 документа RFC 8446:2018 <<The Transport Layer Security (TLS) Protocol. Version 
