--- a/spec13/01Logo.tex
+++ b/spec13/01Logo.tex
@@ -34,7 +34,7 @@ The Transport Layer Security Protocol Version 1.3
 \hrule width \textwidth
 \end{center}
 
-\mbox{}\hfill{\bfseries Дата введения 202X-XX-XX}
+\mbox{}\hfill{\bfseries Дата введения 2026-07-01}
 
 \chapter{Область применения}
 
