--- a/spec13/99Biblio.tex
+++ b/spec13/99Biblio.tex
@@ -3,10 +3,10 @@
 \bibitem{ISO9899}
 ISO/IEC 9899:2011,
 Information technology~--– Programming languages~--- C\\
-{\small (Информационные технологии~--- Языки программирования~--- Си)}
+{\small (Информационные технологии. Языки программирования. Си)}
 
 \bibitem{RFC4506}
-M. Eisler, Ed. 
+Eisler M., ed. 
 XDR: External Data Representation Standard. 
 Request for Comments: 4506, 2006\\
 {\small (XDR: стандарт представления внешних данных)}
@@ -15,7 +15,7 @@ Request for Comments: 4506, 2006\\
 Rescorla E.
 The Transport Layer Security (TLS) Protocol Version 1.3.
 Request for Comments: 8446, 2018\\
-{\small (Протокол защиты транспортного уровня. Версия 1.3)}
+{\small (Протокол защиты транспортного уровня версии 1.3)}
 
 \bibitem{Kra10}
 Krawczyk~H. 
